--- a/src/html/groupcoursemanagement.html
+++ b/src/html/groupcoursemanagement.html
@@ -326,14 +326,14 @@
         <div class="modal-body">
           <form class="form-horizontal">
             <div class="form-group">
-              <label class="col-lg-2 control-label">学员组名</label>
-              <div class="col-lg-10">
+              <label class="col-lg-3 control-label">学员组名</label>
+              <div class="col-lg-9">
                 <input type="text" placeholder="请输入学员组名" class="form-control">
               </div>
             </div>
             <div class="form-group">
-              <label class="col-lg-2 control-label">设置课程阶段</label>
-              <div class="col-lg-10">
+              <label class="col-lg-3 control-label xc-nowrap">设置课程阶段</label>
+              <div class="col-lg-9">
                 <div class="checkbox">
                   <label>
                     <input type="checkbox" value="" name='kc'>启蒙课程
