--- a/src/html/intelligent_real_unit.html
+++ b/src/html/intelligent_real_unit.html
@@ -253,23 +253,23 @@
                 </a>
               </div>
               <div class="xc-text-item">
-                <a href="./intelligent_real_hearing.html">完形填空一
+                <a href="./intelligent_real_blank_01.html">完形填空一
                   <br>（未录入）
                 </a>
               </div>
               <div class="xc-text-item">
-                <a href="./intelligent_real_hearing.html">完形填空二
+                <a href="./intelligent_real_blank_02.html">完形填空二
                   <br>
                   <span class="error">未完成</span>
                 </a>
               </div>
               <div class="xc-text-item">
-                <a href="./intelligent_real_hearing.html">改错
+                <a href="./intelligent_real_mistalk.html">改错
                   <br>（未录入）
                 </a>
               </div>
               <div class="xc-text-item">
-                <a href="./intelligent_real_hearing.html">写作
+                <a href="./intelligent_real_write.html">写作
                   <br>
                   <span class="error">未完成</span>
                 </a>
