--- a/src/html/intelligent_real_words_05.html
+++ b/src/html/intelligent_real_words_05.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>同步智测-基础知识</title>
+  <title>同步智测-词汇与语法</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -236,7 +236,7 @@
             <li>
               <a href="./intelligent_test_unit_unit.html">卷内试题目录</a>
             </li>
-            <li class="active">基础知识四</li>
+            <li class="active">词汇与语法5</li>
           </ol>
         </div>
         <div class="row">
@@ -246,25 +246,21 @@
                 <div class="xc-tab xc-mb10">
                   <ul class="xc-tab-head xc-bas">
                     <li>
-                      <a href="./intelligent_test_bas_01.html">Ⅰ</a>
+                      <a href="./intelligent_real_words_01.html">Ⅰ</a>
                     </li>
                     <li>
-                      <a href="./intelligent_test_bas_02.html">
+                      <a href="./intelligent_real_words_02.html">
                         Ⅱ</a>
                     </li>
                     <li>
-                      <a href="./intelligent_test_bas_03.html">Ⅲ</a>
+                      <a href="./intelligent_real_words_03.html">Ⅲ</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_real_words_04.html">Ⅳ</a>
                     </li>
                     <li class="active">
-                      <a href="javascript:;">Ⅳ</a>
-                    </li>
-                    <li>
-                      <a href="./intelligent_test_bas_05.html">
+                      <a href="javascript:;">
                         Ⅴ</a>
-                    </li>
-                    <li>
-                      <a href="./intelligent_test_bas_06.html">
-                        Ⅵ</a>
                     </li>
                   </ul>
                 </div>
@@ -276,22 +272,48 @@
                   <div class="form-group">
                     <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
                     <div class="col-lg-11">
-                      <input type="text" placeholder="读单词，选出划线部分发音不同的单词，用A, B, C或D表示" class="form-control">
+                      <input type="text" placeholder="根据所给要求，改写下列句子。每空格限填一词" class="form-control">
                     </div>
                   </div>
                   <div class="xc-bas-item">
                     <h4>01</h4>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">题干：</label>
+                      <label class="col-lg-1 control-label">原句：</label>
                       <div class="col-lg-11">
-                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <input type="text" placeholder="请输入原句" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">改写：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入改写" class="form-control">
                         <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
                         <p class="xc-error">sssss {$name} aaaaa</p>
                         <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <label class="col-lg-1 control-label">答案：</label>
+                      <div class="col-lg-11">
+                        <div class="form-group">
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                        </div>
+                        <p class="xc-error" style="width: 100%">注意：按顺序填写，输入框可能有多余，无需填写多余的输入框</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -309,16 +331,42 @@
                   <div class="xc-bas-item">
                     <h4>02</h4>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">题干：</label>
+                      <label class="col-lg-1 control-label">原句：</label>
                       <div class="col-lg-11">
-                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <input type="text" placeholder="请输入原句" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">改写：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入改写" class="form-control">
                         <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
                         <p class="xc-error">sssss {$name} aaaaa</p>
                         <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <label class="col-lg-1 control-label">答案：</label>
+                      <div class="col-lg-11">
+                        <div class="form-group">
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                        </div>
+                        <p class="xc-error" style="width: 100%">注意：按顺序填写，输入框可能有多余，无需填写多余的输入框</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -336,16 +384,148 @@
                   <div class="xc-bas-item">
                     <h4>03</h4>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">题干：</label>
+                      <label class="col-lg-1 control-label">原句：</label>
                       <div class="col-lg-11">
-                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <input type="text" placeholder="请输入原句" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">改写：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入改写" class="form-control">
                         <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
                         <p class="xc-error">sssss {$name} aaaaa</p>
                         <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <label class="col-lg-1 control-label">答案：</label>
+                      <div class="col-lg-11">
+                        <div class="form-group">
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                        </div>
+                        <p class="xc-error" style="width: 100%">注意：按顺序填写，输入框可能有多余，无需填写多余的输入框</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>Option 1</option>
+                          <option>Option 2</option>
+                          <option>Option 3</option>
+                          <option>Option 4</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>04</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">原句：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入原句" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">改写：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入改写" class="form-control">
+                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
+                        <p class="xc-error">sssss {$name} aaaaa</p>
+                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案：</label>
+                      <div class="col-lg-11">
+                        <div class="form-group">
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                        </div>
+                        <p class="xc-error" style="width: 100%">注意：按顺序填写，输入框可能有多余，无需填写多余的输入框</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>Option 1</option>
+                          <option>Option 2</option>
+                          <option>Option 3</option>
+                          <option>Option 4</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>05</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">原句：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入原句" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">改写：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入改写" class="form-control">
+                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
+                        <p class="xc-error">sssss {$name} aaaaa</p>
+                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案：</label>
+                      <div class="col-lg-11">
+                        <div class="form-group">
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                          <div class="col-lg-2">
+                            <input type="text" placeholder="请输入答案" class="form-control">
+                          </div>
+                        </div>
+                        <p class="xc-error" style="width: 100%">注意：按顺序填写，输入框可能有多余，无需填写多余的输入框</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
