--- a/src/html/intelligent_test_bas_01.html
+++ b/src/html/intelligent_test_bas_01.html
@@ -274,7 +274,7 @@
                     <button class="btn btn-default">清空代码</button>
                   </div>
                   <div class="form-group">
-                    <label class="col-lg-1 control-label">题目文本：</label>
+                    <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
                     <div class="col-lg-11">
                       <input type="text" placeholder="读单词，选出划线部分发音不同的单词，用A, B, C或D表示" class="form-control">
                     </div>
@@ -282,7 +282,7 @@
                   <div class="xc-bas-item">
                     <h4>01</h4>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -642,7 +642,7 @@
                   <div class="xc-bas-item">
                     <h4>02</h4>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -1002,7 +1002,7 @@
                   <div class="xc-bas-item">
                     <h4>03</h4>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -1362,7 +1362,7 @@
                   <div class="xc-bas-item">
                     <h4>04</h4>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
