--- a/src/html/synchronize_unit_sentence_edit.html
+++ b/src/html/synchronize_unit_sentence_edit.html
@@ -283,7 +283,7 @@
                             </div>
                           </div>
                           <div class="form-group col-xs-12 clearfix">
-                            <label class="col-lg-1 control-label">请填写：</label>
+                            <label class="col-lg-1 control-label xc-nowrap">请填写：</label>
                             <div class="col-lg-11 tab-input-group">
                               <div>
                                 <div class="col-xs-1">
@@ -354,7 +354,7 @@
                           <h4>英译汉：选项为汉语释义</h4>
                           <div class="clearfix">
                             <div class="form-group col-xs-6">
-                              <label class="col-lg-2 control-label">正确答案：</label>
+                              <label class="col-lg-2 control-label xc-nowrap">正确答案：</label>
                               <div class="col-lg-10">
                                 <select name="account" class="form-control m-b">
                                   <option value="">请选择正确答案</option>
@@ -397,7 +397,7 @@
                           </div>
                           <div class="clearfix">
                             <div class="form-group col-xs-6">
-                              <label class="col-lg-2 control-label">正确答案：</label>
+                              <label class="col-lg-2 control-label xc-nowrap">正确答案：</label>
                               <div class="col-lg-10">
                                 <select name="account" class="form-control m-b">
                                   <option value="">请选择正确答案</option>
