--- a/src/html/synchronize_unit_text.html
+++ b/src/html/synchronize_unit_text.html
@@ -256,7 +256,7 @@
                               </div>
                             </div>
                             <div class="form-group col-xs-12">
-                              <label class="col-lg-1 control-label">请填写：</label>
+                              <label class="col-lg-1 control-label xc-nowrap">请填写：</label>
                               <div class="col-lg-11">
                                 <input type="text" class="form-control" placeholder="请输入英文句子" />
                               </div>
@@ -322,7 +322,7 @@
                             </div>
                           </div>
                           <div class="form-group col-xs-12 clearfix">
-                            <label class="col-lg-1 control-label">请填写：</label>
+                            <label class="col-lg-1 control-label xc-nowrap">请填写：</label>
                             <div class="col-lg-11 tab-input-group">
                               <div>
                                 <div class="col-xs-1">
@@ -400,7 +400,7 @@
                             </div>
                           </div>
                           <div class="form-group col-xs-12 clearfix">
-                            <label class="col-lg-1 control-label">按顺序填写答案：</label>
+                            <label class="col-lg-1 control-label xc-nowrap">按顺序填写答案：</label>
                             <div class="col-lg-11 tab-input-group">
                               <div>
                                 <div class="col-xs-1">
