--- a/src/html/intelligent_real_blank_02.html
+++ b/src/html/intelligent_real_blank_02.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>同步智测-基础知识</title>
+  <title>同步智测-完形填空</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -225,80 +225,153 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          基础知识
+          阅读理解
           <ol class="breadcrumb">
             <li>
-              <a href="./intelligent_test.html">同步智测</a>
+              <a href="./intelligent_real.html">高考冲刺</a>
             </li>
             <li>
-              <a href="./intelligent_test_unit.html">分卷</a>
+              <a href="./intelligent_real_detail.html">试卷</a>
             </li>
             <li>
-              <a href="./intelligent_test_unit_unit.html">卷内试题目录</a>
+              <a href="./intelligent_real_unit.html">卷内试题目录</a>
             </li>
-            <li class="active">基础知识四</li>
+            <li class="active">完形填空二</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <div class="panel-default">
               <div class="panel-heading">
-                <div class="xc-tab xc-mb10">
-                  <ul class="xc-tab-head xc-bas">
-                    <li>
-                      <a href="./intelligent_test_bas_01.html">Ⅰ</a>
-                    </li>
-                    <li>
-                      <a href="./intelligent_test_bas_02.html">
-                        Ⅱ</a>
-                    </li>
-                    <li>
-                      <a href="./intelligent_test_bas_03.html">Ⅲ</a>
-                    </li>
-                    <li class="active">
-                      <a href="javascript:;">Ⅳ</a>
-                    </li>
-                    <li>
-                      <a href="./intelligent_test_bas_05.html">
-                        Ⅴ</a>
-                    </li>
-                    <li>
-                      <a href="./intelligent_test_bas_06.html">
-                        Ⅵ</a>
-                    </li>
-                  </ul>
-                </div>
                 <form class="form-horizontal">
                   <div class="xc-mb10">
                     <button class="btn btn-primary">保存</button>
-                    <button class="btn btn-default">清空代码</button>
+                    <button class="btn btn-default">清空本页</button>
                   </div>
                   <div class="form-group">
-                    <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
+                    <label class="col-lg-1 control-label">短文：</label>
                     <div class="col-lg-11">
-                      <input type="text" placeholder="读单词，选出划线部分发音不同的单词，用A, B, C或D表示" class="form-control">
+                      <div data-role="editor-toolbar" data-target="#editor" class="btn-toolbar btn-editor">
+                        <div class="btn-group dropdown">
+                          <a data-toggle="dropdown" title="Font" class="btn btn-default">
+                            <em class="fa fa-font"></em>
+                            <b class="caret"></b>
+                          </a>
+                          <ul class="dropdown-menu">
+                            <li>
+                              <a href="" data-edit="fontName Arial" style="font-family:'Arial'">Arial</a>
+                            </li>
+                            <li>
+                              <a href="" data-edit="fontName Sans" style="font-family:'Sans'">Sans</a>
+                            </li>
+                            <li>
+                              <a href="" data-edit="fontName Serif" style="font-family:'Serif'">Serif</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="btn-group dropdown">
+                          <a data-toggle="dropdown" title="Font Size" class="btn btn-default">
+                            <em class="fa fa-text-height"></em>&nbsp;
+                            <b class="caret"></b>
+                          </a>
+                          <ul class="dropdown-menu">
+                            <li>
+                              <a href="" data-edit="fontSize 5" style="font-size:24px">Huge</a>
+                            </li>
+                            <li>
+                              <a href="" data-edit="fontSize 3" style="font-size:18px">Normal</a>
+                            </li>
+                            <li>
+                              <a href="" data-edit="fontSize 1" style="font-size:14px">Small</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="btn-group">
+                          <a data-edit="bold" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Bold (Ctrl/Cmd+B)">
+                            <em class="fa fa-bold"></em>
+                          </a>
+                          <a data-edit="italic" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Italic (Ctrl/Cmd+I)">
+                            <em class="fa fa-italic"></em>
+                          </a>
+                          <a data-edit="strikethrough" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Strikethrough">
+                            <em class="fa fa-strikethrough"></em>
+                          </a>
+                          <a data-edit="underline" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Underline (Ctrl/Cmd+U)">
+                            <em class="fa fa-underline"></em>
+                          </a>
+                        </div>
+                        <div class="btn-group">
+                          <a data-edit="insertunorderedlist" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Bullet list">
+                            <em class="fa fa-list-ul"></em>
+                          </a>
+                          <a data-edit="insertorderedlist" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Number list">
+                            <em class="fa fa-list-ol"></em>
+                          </a>
+                          <a data-edit="outdent" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Reduce indent (Shift+Tab)">
+                            <em class="fa fa-dedent"></em>
+                          </a>
+                          <a data-edit="indent" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Indent (Tab)">
+                            <em class="fa fa-indent"></em>
+                          </a>
+                        </div>
+                        <div class="btn-group">
+                          <a data-edit="justifyleft" data-toggle="tooltip" title="" class="btn btn-default btn-info" data-original-title="Align Left (Ctrl/Cmd+L)">
+                            <em class="fa fa-align-left"></em>
+                          </a>
+                          <a data-edit="justifycenter" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Center (Ctrl/Cmd+E)">
+                            <em class="fa fa-align-center"></em>
+                          </a>
+                          <a data-edit="justifyright" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Align Right (Ctrl/Cmd+R)">
+                            <em class="fa fa-align-right"></em>
+                          </a>
+                          <a data-edit="justifyfull" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Justify (Ctrl/Cmd+J)">
+                            <em class="fa fa-align-justify"></em>
+                          </a>
+                        </div>
+                        <div class="btn-group dropdown">
+                          <a data-toggle="dropdown" title="Hyperlink" class="btn btn-default" aria-expanded="false">
+                            <em class="fa fa-link"></em>
+                          </a>
+                          <div class="dropdown-menu">
+                            <div class="input-group ml-xs mr-xs">
+                              <input id="LinkInput" placeholder="URL" type="text" data-edit="createLink" class="form-control input-sm">
+                              <div class="input-group-btn">
+                                <button type="button" class="btn btn-sm btn-default">Add</button>
+                              </div>
+                            </div>
+                          </div>
+                          <a data-edit="unlink" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Remove Hyperlink">
+                            <em class="fa fa-cut"></em>
+                          </a>
+                        </div>
+                        <div class="btn-group">
+                          <a id="pictureBtn" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Insert picture (or just drag &amp; drop)">
+                            <em class="fa fa-picture-o"></em>
+                          </a>
+                          <input type="file" data-edit="insertImage" style="position:absolute; opacity:0; width:41px; height:34px">
+                        </div>
+                        <div class="btn-group pull-right">
+                          <a data-edit="undo" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Undo (Ctrl/Cmd+Z)">
+                            <em class="fa fa-undo"></em>
+                          </a>
+                          <a data-edit="redo" data-toggle="tooltip" title="" class="btn btn-default" data-original-title="Redo (Ctrl/Cmd+Y)">
+                            <em class="fa fa-repeat"></em>
+                          </a>
+                        </div>
+                      </div>
+                      <div style="overflow:scroll; height:250px;max-height:250px" class="form-control wysiwyg mt-lg" contenteditable="true">Type something ...</div>
+                      <p class="xc-error">注意：短文内的题目号应为 _____1_____ ~ _____10_____</p>
                     </div>
                   </div>
                   <div class="xc-bas-item">
-                    <h4>01</h4>
+                    <h4>01.</h4>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">题干：</label>
-                      <div class="col-lg-11">
-                        <input type="text" placeholder="请输入题干" class="form-control">
-                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
-                        <p class="xc-error">sssss {$name} aaaaa</p>
-                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&amp;解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
-                          <option>Option 1</option>
-                          <option>Option 2</option>
-                          <option>Option 3</option>
-                          <option>Option 4</option>
+                          <option>1</option>
+                          <option>2</option>
                         </select>
                       </div>
                       <div class="col-lg-9">
@@ -307,25 +380,14 @@
                     </div>
                   </div>
                   <div class="xc-bas-item">
-                    <h4>02</h4>
+                    <h4>02.</h4>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">题干：</label>
-                      <div class="col-lg-11">
-                        <input type="text" placeholder="请输入题干" class="form-control">
-                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
-                        <p class="xc-error">sssss {$name} aaaaa</p>
-                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&amp;解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
-                          <option>Option 1</option>
-                          <option>Option 2</option>
-                          <option>Option 3</option>
-                          <option>Option 4</option>
+                          <option>1</option>
+                          <option>2</option>
                         </select>
                       </div>
                       <div class="col-lg-9">
@@ -334,25 +396,46 @@
                     </div>
                   </div>
                   <div class="xc-bas-item">
-                    <h4>03</h4>
+                    <h4>03.</h4>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">题干：</label>
-                      <div class="col-lg-11">
-                        <input type="text" placeholder="请输入题干" class="form-control">
-                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
-                        <p class="xc-error">sssss {$name} aaaaa</p>
-                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&amp;解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
-                          <option>Option 1</option>
-                          <option>Option 2</option>
-                          <option>Option 3</option>
-                          <option>Option 4</option>
+                          <option>1</option>
+                          <option>2</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>04.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label xc-nowrap">答案&amp;解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>1</option>
+                          <option>2</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>05.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label xc-nowrap">答案&amp;解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>1</option>
+                          <option>2</option>
                         </select>
                       </div>
                       <div class="col-lg-9">
@@ -396,7 +479,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
+  <script src="../js/intelligent.js"></script>
 
 
 
