--- a/src/html/intelligent_real_read_c03.html
+++ b/src/html/intelligent_real_read_c03.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>同步课程-编辑单词</title>
+  <title>同步智测-阅读理解</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -21,6 +21,7 @@
   <!-- endbuild -->
 
   <link rel="stylesheet" href="../css/main_xc.css">
+
 
 
 </head>
@@ -53,7 +54,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -222,175 +225,166 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
+          阅读理解
           <ol class="breadcrumb">
             <li>
-              <a href="./synchronize.html">同步课程</a>
+              <a href="./intelligent_real.html">高考冲刺</a>
             </li>
             <li>
-              <a href="./synchronize_unit.html">单元</a>
+              <a href="./intelligent_real_detail.html">试卷</a>
             </li>
             <li>
-              <a href="./synchronize_unit_word.html">单词列表</a>
+              <a href="./intelligent_real_unit.html">卷内试题目录</a>
             </li>
-            <li class="active">编辑单词</li>
+            <li class="active">初中-阅读理解C</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <div class="panel-default">
               <div class="panel-heading">
-                <div class="xc-tab jq-xc-tab">
-                  <ul class="xc-tab-head">
-                    <li>基础属性</li>
-                    <li>闯关題</li>
-                    <span class="line"></span>
-                  </ul>
-                  <ul class="xc-tab-body">
-                    <li class="active">
-                      <form class="form-horizontal">
-                        <div>
-                          <input class="file" type="file" name="files" multiple="" style="display: none">
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">单词</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入单词" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">音标</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入音标" class="form-control">
-                            </div>
-                          </div>
-                          <div class="clearfix">
-                            <div class="form-group col-xs-6">
-                              <label class="col-lg-2 control-label">发音</label>
-                              <div class="col-lg-10">
-                                <span class="btn btn-default jq-fileinput-button">
-                                  <i class="fa fa-fw fa-upload"></i>
-                                  <span>上传文件</span>
-                                </span>
-                                <p>支持扩展名：.xxx .xxx .xxx</p>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">词性</label>
-                            <div class="col-lg-10">
-                              <select name="account" class="form-control m-b">
-                                <option value="">请选择词性</option>
-                                <option>词性 1</option>
-                                <option>词性 2</option>
-                                <option>词性 3</option>
-                                <option>词性 4</option>
-                              </select>
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">词义</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入词义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">
-                              <button class="btn btn-default btn-small"> + 增加词性词义</button>
-                            </label>
-                          </div>
-                        </div>
-                      </form>
+                <div class="xc-tab jq-xc-tab xc-mb10">
+                  <ul class="xc-tab-head xc-bas">
+                    <li>
+                      <a href="./intelligent_real_read_c01.html">A</a>
                     </li>
                     <li>
-                      <form class="form-horizontal">
-                        <div>
-                          <h4>英译汉：选项为汉语释义</h4>
-                          <div class="clearfix">
-                            <div class="form-group col-xs-6">
-                              <label class="col-lg-2 control-label xc-nowrap">正确答案：</label>
-                              <div class="col-lg-10">
-                                <select name="account" class="form-control m-b">
-                                  <option value="">请选择正确答案</option>
-                                  <option>A</option>
-                                  <option>B</option>
-                                  <option>C</option>
-                                  <option>D</option>
-                                </select>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">A：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">B：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">C：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">D：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                        </div>
-                        <div>
-                          <div class="clearfix">
-                            <h4>英译汉：选项为汉语释义</h4>
-                          </div>
-                          <div class="clearfix">
-                            <div class="form-group col-xs-6">
-                              <label class="col-lg-2 control-label xc-nowrap">正确答案：</label>
-                              <div class="col-lg-10">
-                                <select name="account" class="form-control m-b">
-                                  <option value="">请选择正确答案</option>
-                                  <option>A</option>
-                                  <option>B</option>
-                                  <option>C</option>
-                                  <option>D</option>
-                                </select>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">A：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">B：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">C：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">D：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                        </div>
-                        <button class="btn btn-primary">保存</button>
-                      </form>
+                      <a href="./intelligent_real_read_c02.html">B</a>
+                    </li>
+                    <li class="active">
+                      <a href="javascript:;">C</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_real_read_c04.html">D</a>
                     </li>
                   </ul>
+
                 </div>
+                <form class="form-horizontal">
+                  <div class="xc-mb10">
+                    <button class="btn btn-primary">保存</button>
+                    <button class="btn btn-default">清空本页</button>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="在短文的空格内填入适当的词，使其内容通顺，每空格限执一词，首字母己给" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">短文：</label>
+                    <div class="col-lg-11">
+                      <textarea class="form-control" placeholder="请输入文本" rows="5"></textarea>
+                      <p class="xc-error">注意：请在文本中填写首字母，短文内的题目号应为 a_____1_____ ~b _____7_____</p>
+                    </div>
+                  </div>
+                  <h4>题目</h4>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">1：</label>
+                    <div class="col-lg-2">
+                      <input type="text" placeholder="请输入首字母" class="form-control">
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入答案" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">解析：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">2：</label>
+                    <div class="col-lg-2">
+                      <input type="text" placeholder="请输入首字母" class="form-control">
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入答案" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">解析：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">3：</label>
+                    <div class="col-lg-2">
+                      <input type="text" placeholder="请输入首字母" class="form-control">
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入答案" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">解析：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">4：</label>
+                    <div class="col-lg-2">
+                      <input type="text" placeholder="请输入首字母" class="form-control">
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入答案" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">解析：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">5：</label>
+                    <div class="col-lg-2">
+                      <input type="text" placeholder="请输入首字母" class="form-control">
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入答案" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">解析：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">6：</label>
+                    <div class="col-lg-2">
+                      <input type="text" placeholder="请输入首字母" class="form-control">
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入答案" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">解析：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">7：</label>
+                    <div class="col-lg-2">
+                      <input type="text" placeholder="请输入首字母" class="form-control">
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入答案" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">解析：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
@@ -426,8 +420,8 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+  <script src="../js/intelligent.js"></script>
 
-  <script src="../js/synchronize.js"></script>
 
 
 
