--- a/src/html/intelligent_real_words_04.html
+++ b/src/html/intelligent_real_words_04.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>同步课程-编辑单词</title>
+  <title>同步智测-词汇与语法</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -21,6 +21,7 @@
   <!-- endbuild -->
 
   <link rel="stylesheet" href="../css/main_xc.css">
+
 
 
 </head>
@@ -53,7 +54,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -222,175 +225,162 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
+          基础知识
           <ol class="breadcrumb">
             <li>
-              <a href="./synchronize.html">同步课程</a>
+              <a href="./intelligent_test.html">同步智测</a>
             </li>
             <li>
-              <a href="./synchronize_unit.html">单元</a>
+              <a href="./intelligent_test_unit.html">分卷</a>
             </li>
             <li>
-              <a href="./synchronize_unit_word.html">单词列表</a>
+              <a href="./intelligent_test_unit_unit.html">卷内试题目录</a>
             </li>
-            <li class="active">编辑单词</li>
+            <li class="active">词汇与语法4</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <div class="panel-default">
               <div class="panel-heading">
-                <div class="xc-tab jq-xc-tab">
-                  <ul class="xc-tab-head">
-                    <li>基础属性</li>
-                    <li>闯关題</li>
-                    <span class="line"></span>
-                  </ul>
-                  <ul class="xc-tab-body">
-                    <li class="active">
-                      <form class="form-horizontal">
-                        <div>
-                          <input class="file" type="file" name="files" multiple="" style="display: none">
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">单词</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入单词" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">音标</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入音标" class="form-control">
-                            </div>
-                          </div>
-                          <div class="clearfix">
-                            <div class="form-group col-xs-6">
-                              <label class="col-lg-2 control-label">发音</label>
-                              <div class="col-lg-10">
-                                <span class="btn btn-default jq-fileinput-button">
-                                  <i class="fa fa-fw fa-upload"></i>
-                                  <span>上传文件</span>
-                                </span>
-                                <p>支持扩展名：.xxx .xxx .xxx</p>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">词性</label>
-                            <div class="col-lg-10">
-                              <select name="account" class="form-control m-b">
-                                <option value="">请选择词性</option>
-                                <option>词性 1</option>
-                                <option>词性 2</option>
-                                <option>词性 3</option>
-                                <option>词性 4</option>
-                              </select>
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">词义</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入词义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">
-                              <button class="btn btn-default btn-small"> + 增加词性词义</button>
-                            </label>
-                          </div>
-                        </div>
-                      </form>
+                <div class="xc-tab xc-mb10">
+                  <ul class="xc-tab-head xc-bas">
+                    <li>
+                      <a href="./intelligent_real_words_03.html">Ⅰ</a>
                     </li>
                     <li>
-                      <form class="form-horizontal">
-                        <div>
-                          <h4>英译汉：选项为汉语释义</h4>
-                          <div class="clearfix">
-                            <div class="form-group col-xs-6">
-                              <label class="col-lg-2 control-label xc-nowrap">正确答案：</label>
-                              <div class="col-lg-10">
-                                <select name="account" class="form-control m-b">
-                                  <option value="">请选择正确答案</option>
-                                  <option>A</option>
-                                  <option>B</option>
-                                  <option>C</option>
-                                  <option>D</option>
-                                </select>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">A：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">B：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">C：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">D：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                        </div>
-                        <div>
-                          <div class="clearfix">
-                            <h4>英译汉：选项为汉语释义</h4>
-                          </div>
-                          <div class="clearfix">
-                            <div class="form-group col-xs-6">
-                              <label class="col-lg-2 control-label xc-nowrap">正确答案：</label>
-                              <div class="col-lg-10">
-                                <select name="account" class="form-control m-b">
-                                  <option value="">请选择正确答案</option>
-                                  <option>A</option>
-                                  <option>B</option>
-                                  <option>C</option>
-                                  <option>D</option>
-                                </select>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">A：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">B：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">C：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">D：</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入汉语释义" class="form-control">
-                            </div>
-                          </div>
-                        </div>
-                        <button class="btn btn-primary">保存</button>
-                      </form>
+                      <a href="./intelligent_real_words_02.html">
+                        Ⅱ</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_real_words_03.html">Ⅲ</a>
+                    </li>
+                    <li class="active">
+                      <a href="javascript:;">Ⅳ</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_real_words_05.html">
+                        Ⅴ</a>
                     </li>
                   </ul>
                 </div>
+                <form class="form-horizontal">
+                  <div class="xc-mb10">
+                    <button class="btn btn-primary">保存</button>
+                    <button class="btn btn-default">清空代码</button>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="用括号中所给单词的适当形式完成下列句子" class="form-control">
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>01.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
+                        <p class="xc-error">sssss {$name} aaaaa</p>
+                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <input type="text" placeholder="请输入答案" class="form-control">
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>02.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
+                        <p class="xc-error">sssss {$name} aaaaa</p>
+                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <input type="text" placeholder="请输入答案" class="form-control">
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>03.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
+                        <p class="xc-error">sssss {$name} aaaaa</p>
+                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <input type="text" placeholder="请输入答案" class="form-control">
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>04.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
+                        <p class="xc-error">sssss {$name} aaaaa</p>
+                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <input type="text" placeholder="请输入答案" class="form-control">
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>05.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
+                        <p class="xc-error">sssss {$name} aaaaa</p>
+                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <input type="text" placeholder="请输入答案" class="form-control">
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
@@ -427,7 +417,7 @@
   <script src="../js/app.js"></script>
   <!-- endbuild -->
 
-  <script src="../js/synchronize.js"></script>
+
 
 
 
