--- a/src/html/intelligent_test_bas_03.html
+++ b/src/html/intelligent_test_bas_03.html
@@ -274,7 +274,7 @@
                     <button class="btn btn-default">清空代码</button>
                   </div>
                   <div class="form-group">
-                    <label class="col-lg-1 control-label">题目文本：</label>
+                    <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
                     <div class="col-lg-11">
                       <input type="text" placeholder="读单词，选出划线部分发音不同的单词，用A, B, C或D表示" class="form-control">
                     </div>
@@ -415,7 +415,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -566,7 +566,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -717,7 +717,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -868,7 +868,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -1019,7 +1019,7 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <label class="col-lg-1 control-label">答案&解析：</label>
+                        <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                         <div class="col-lg-2">
                           <select name="account" class="form-control m-b">
                             <option value="">请选择答案</option>
