--- a/src/html/mallmanagement_order.html
+++ b/src/html/mallmanagement_order.html
@@ -237,7 +237,7 @@
                 <form class="text-right form-lineH">
                   <div class="row">
                     <div class="form-group col-sm-3">
-                      <label class="col-sm-4">选择学校：</label>
+                      <label class="col-sm-4 xc-nowrap">选择学校：</label>
                       <div class="col-sm-8">
                         <select name="" id="" class="form-control">
                           <option value="">全部</option>
