--- a/src/html/studentmanagement_allocated.html
+++ b/src/html/studentmanagement_allocated.html
@@ -232,14 +232,14 @@
               <div class="panel-heading">
                 <form class="text-right form-lineH">
                   <div class="row">
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">学生手机：</label>
+                    <div class="form-group col-sm-4">
+                      <label class="col-sm-4 xc-nowrap">学生手机：</label>
                       <div class="col-sm-8">
                         <input type="tel" name="" class="form-control">
                       </div>
                     </div>
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">所属学校：</label>
+                    <div class="form-group col-sm-4">
+                      <label class="col-sm-4 xc-nowrap">所属学校：</label>
                       <div class="col-sm-8">
                         <select name="" id="" class="form-control">
                           <option value="">全部</option>
@@ -248,8 +248,8 @@
                         </select>
                       </div>
                     </div>
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">账号状态：</label>
+                    <div class="form-group col-sm-4">
+                      <label class="col-sm-4 xc-nowrap">账号状态：</label>
                       <div class="col-sm-8">
                         <select name="" id="" class="form-control">
                           <option value="">全部</option>
@@ -260,8 +260,8 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">处理速度：</label>
+                    <div class="form-group col-sm-4">
+                      <label class="col-sm-4 xc-nowrap">处理速度：</label>
                       <div class="col-sm-8">
                         <select name="" id="" class="form-control">
                           <option value="">全部</option>
