--- a/src/html/studentmanagement_unallocated.html
+++ b/src/html/studentmanagement_unallocated.html
@@ -233,7 +233,7 @@
                 <form class="text-right form-lineH">
                   <div class="row">
                     <div class="form-group col-sm-3">
-                      <label class="col-sm-4">学生手机：</label>
+                      <label class="col-sm-4 xc-nowrap">学生手机：</label>
                       <div class="col-sm-8">
                         <input type="tel" name="" class="form-control">
                       </div>
