--- a/src/html/synchronize.html
+++ b/src/html/synchronize.html
@@ -1017,7 +1017,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
+  <script src="../js/synchronize.js"></script>
 
 
 
