--- a/src/html/teachermanagement_list.html
+++ b/src/html/teachermanagement_list.html
@@ -238,7 +238,7 @@
                       </div>
                     </div>
                     <div class="form-group col-sm-3">
-                      <label class="col-sm-4">所属学校：</label>
+                      <label class="col-sm-4 xc-nowrap">所属学校：</label>
                       <div class="col-sm-8">
                         <select name="" id="" class="form-control">
                           <option value="">全部</option>
@@ -248,7 +248,7 @@
                       </div>
                     </div>
                     <div class="form-group col-sm-3">
-                      <label class="col-sm-4">账号状态：</label>
+                      <label class="col-sm-4 xc-nowrap">账号状态：</label>
                       <div class="col-sm-8">
                         <select name="" id="" class="form-control">
                           <option value="">全部</option>
